--- a/package.json
+++ b/package.json
@@ -1,5 +1,8 @@
 {
   "dependencies": {
+    "csv": "^6.2.2",
+    "csvtojson": "^2.0.10",
+    "device": "^0.3.12",
     "express": "^4.18.2",
     "mysql2": "^3.0.0-rc.1",
     "sequelize": "^6.25.4",
